[Polyam] fix: Tweak focus style & spacing of list/hashtags expand/collapse button
Port 474464ffffca696f3e0d304337697363479906bd to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/single_column.scss
+++ b/app/javascript/flavours/polyam/styles/components/single_column.scss
@@ -251,6 +251,7 @@ $ui-header-height: 55px;
     &__header {
       display: flex;
       align-items: center;
+      padding-inline-end: 4px;
 
       &__sep {
         width: 0;
